# platform_external_libffi

./: Android.bp  Android.mk  CMakeLists.txt  Libffi.mk  METADATA  OWNERS
darwin-x86/: ffi.h  fficonfig.h
include/: ffi_real.h
linux-arm/: ffi.h  fficonfig.h
linux-arm64/: fficonfig.h
linux-riscv64/: ffi.h  fficonfig.h  ffitarget.h
linux-x86/: ffi.h  fficonfig.h
src/powerpc/: darwin.S
src/x86/: sysv.S
testsuite/: Android.mk
windows-msvc-x86_64/: fficonfig.h
